# resume-builder

./: .gitignore  README.md  pyproject.toml
data/: resume.yaml
src/resume_builder/: __main__.py  cli.py
src/resume_builder/domain/: __init__.py  compaction.py  models.py  normalize.py  scoring.py
src/resume_builder/infra/: __init__.py  io_ops.py  pdf.py  pipeline.py  reports.py  scaffold.py  templating.py
templates/: resume.css  resume.html
tests/: conftest.py  test_compaction.py  test_models.py  test_pdf_fallback.py  test_pipeline.py  test_render_html.py  test_scoring.py
