[project]
name = "resume-builder"
version = "0.1.0"
description = "Gerador local de curriculo com score deterministico e exportacao PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jinja2>=3.1.6",
  "playwright>=1.58.0",
  "pydantic>=2.13.3",
  "pypdf>=6.10.2",
  "pyyaml>=6.0.2",
  "rapidfuzz>=3.14.5",
  "rich>=15.0.0",
  "textstat>=0.7.13",
  "typer>=0.24.2",
  "weasyprint>=68.1",
]

[project.scripts]
resume = "resume_builder.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_builder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.20.2",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["resume_builder"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"src/resume_builder/cli.py" = ["B008"]
"src/resume_builder/infra/scaffold.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
pretty = true
show_error_codes = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["textstat", "weasyprint"]
ignore_missing_imports = true
